[package]
name = "idb"
version = "0.6.1"
authors = ["Devashish Dixit <devashishdxt@gmail.com>"]
license = "MIT/Apache-2.0"
description = "A futures based crate for interacting with IndexedDB on browsers using webassembly"
homepage = "https://github.com/devashishdxt/idb"
repository = "https://github.com/devashishdxt/idb"
categories = ["asynchronous", "database", "wasm", "web-programming"]
keywords = ["wasm", "indexeddb", "future", "webassembly", "idb"]
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["builder"]
doc = []
builder = ["futures"]
futures = ["tokio"]

[dependencies]
js-sys = "0.3.69"
num-traits = "0.2.19"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["sync"], optional = true }
wasm-bindgen = "0.2.92"
web-sys = { version = "0.3.69", features = [
    "DomException",
    "DomStringList",
    "Event",
    "IdbCursor",
    "IdbCursorDirection",
    "IdbCursorWithValue",
    "IdbDatabase",
    "IdbFactory",
    "IdbIndex",
    "IdbIndexParameters",
    "IdbKeyRange",
    "IdbObjectStore",
    "IdbObjectStoreParameters",
    "IdbOpenDbOptions",
    "IdbOpenDbRequest",
    "IdbRequestReadyState",
    "IdbTransaction",
    "IdbTransactionMode",
    "IdbVersionChangeEvent",
    "StorageType",
] }

[dev-dependencies]
gloo = { version = "0.11.0", default-features = false, features = [
    "timers",
    "futures",
] }
serde = "1.0.203"
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.120"
wasm-bindgen-test = "0.3.42"

[package.metadata.docs.rs]
all-features = true
