[package]
name = "idb"
version = "0.6.3"
authors = ["Devashish Dixit <devashishdxt@gmail.com>"]
license = "MIT/Apache-2.0"
description = "A futures based crate for interacting with IndexedDB on browsers using webassembly"
homepage = "https://github.com/devashishdxt/idb"
repository = "https://github.com/devashishdxt/idb"
categories = ["asynchronous", "database", "wasm", "web-programming"]
keywords = ["wasm", "indexeddb", "future", "webassembly", "idb"]
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["builder"]
doc = []
builder = ["futures"]
futures = ["tokio"]

[dependencies]
js-sys = "0.3"
num-traits = "0.2"
thiserror = "1"
tokio = { version = "1", features = ["sync"], optional = true }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "DomException",
    "DomStringList",
    "Event",
    "IdbCursor",
    "IdbCursorDirection",
    "IdbCursorWithValue",
    "IdbDatabase",
    "IdbFactory",
    "IdbIndex",
    "IdbIndexParameters",
    "IdbKeyRange",
    "IdbObjectStore",
    "IdbObjectStoreParameters",
    "IdbOpenDbOptions",
    "IdbOpenDbRequest",
    "IdbRequestReadyState",
    "IdbTransaction",
    "IdbTransactionMode",
    "IdbVersionChangeEvent",
    "StorageType",
] }

[dev-dependencies]
gloo = { version = "0.11", default-features = false, features = [
    "timers",
    "futures",
] }
serde = "1"
serde-wasm-bindgen = "0.6"
serde_json = "1"
wasm-bindgen-test = "0.3"

[package.metadata.docs.rs]
all-features = true
