[package]
name = "idb-sys"
version = "0.1.2"
authors = ["Devashish Dixit <devashishdxt@gmail.com>"]
license = "MIT/Apache-2.0"
description = "A callback based crate for interacting with IndexedDB on browsers using webassembly"
homepage = "https://github.com/devashishdxt/idb"
repository = "https://github.com/devashishdxt/idb"
categories = ["asynchronous", "database", "wasm", "web-programming"]
keywords = ["wasm", "indexeddb", "future", "webassembly", "idb"]
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3.60"
num-traits = "0.2.15"
thiserror = "1.0.37"
wasm-bindgen = "0.2.83"
web-sys = { version = "0.3.60", features = [
    "DomException",
    "DomStringList",
    "Event",
    "IdbCursor",
    "IdbCursorDirection",
    "IdbCursorWithValue",
    "IdbDatabase",
    "IdbFactory",
    "IdbIndex",
    "IdbIndexParameters",
    "IdbKeyRange",
    "IdbObjectStore",
    "IdbObjectStoreParameters",
    "IdbOpenDbOptions",
    "IdbOpenDbRequest",
    "IdbRequestReadyState",
    "IdbTransaction",
    "IdbTransactionMode",
    "IdbVersionChangeEvent",
    "StorageType",
] }
