[package]
name = "idb"
version = "0.4.0"
authors = ["Devashish Dixit <devashishdxt@gmail.com>"]
license = "MIT/Apache-2.0"
description = "A futures based crate for interacting with IndexedDB on browsers using webassembly"
homepage = "https://github.com/devashishdxt/idb"
repository = "https://github.com/devashishdxt/idb"
categories = ["asynchronous", "database", "wasm", "web-programming"]
keywords = ["wasm", "indexeddb", "future", "webassembly", "idb"]
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
idb-sys = { version = "0.2.0", path = "../idb-sys" }
js-sys = "0.3.60"
num-traits = "0.2.15"
thiserror = "1.0.37"
tokio = { version = "1.23.0", features = ["macros", "sync"] }
wasm-bindgen = "0.2.83"
web-sys = { version = "0.3.60", features = ["Event"] }

[dev-dependencies]
serde = { version = "1.0.150", features = ["derive"] }
serde-wasm-bindgen = "0.4.5"
serde_json = "1.0.89"
wasm-bindgen-test = "0.3.33"
web-sys = { version = "0.3.60", features = ["console"] }
