[package]
name = "idb"
version = "0.4.0"
authors = ["Devashish Dixit <devashishdxt@gmail.com>"]
license = "MIT/Apache-2.0"
description = "A futures based crate for interacting with IndexedDB on browsers using webassembly"
homepage = "https://github.com/devashishdxt/idb"
repository = "https://github.com/devashishdxt/idb"
categories = ["asynchronous", "database", "wasm", "web-programming"]
keywords = ["wasm", "indexeddb", "future", "webassembly", "idb"]
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
idb-sys = { version = "0.2.0", path = "../idb-sys" }
js-sys = "0.3.61"
num-traits = "0.2.15"
thiserror = "1.0.39"
tokio = { version = "1.26.0", features = ["macros", "sync"] }
wasm-bindgen = "0.2.84"
web-sys = { version = "0.3.61", features = ["Event"] }

[dev-dependencies]
serde = { version = "1.0.154", features = ["derive"] }
serde-wasm-bindgen = "0.5.0"
serde_json = "1.0.94"
wasm-bindgen-test = "0.3.34"
web-sys = { version = "0.3.61", features = ["console"] }
