[package]
name = "idb"
version = "0.5.0"
authors = ["Devashish Dixit <devashishdxt@gmail.com>"]
license = "MIT/Apache-2.0"
description = "A futures based crate for interacting with IndexedDB on browsers using webassembly"
homepage = "https://github.com/devashishdxt/idb"
repository = "https://github.com/devashishdxt/idb"
categories = ["asynchronous", "database", "wasm", "web-programming"]
keywords = ["wasm", "indexeddb", "future", "webassembly", "idb"]
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
idb-sys = { version = "0.2.1", path = "../idb-sys" }
js-sys = "0.3.67"
num-traits = "0.2.17"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["macros", "sync"] }
wasm-bindgen = "0.2.90"
web-sys = { version = "0.3.67", features = ["Event"] }

[dev-dependencies]
serde = { version = "1.0.195", features = ["derive"] }
serde-wasm-bindgen = "0.6.3"
serde_json = "1.0.111"
wasm-bindgen-test = "0.3.40"
web-sys = { version = "0.3.67", features = ["console"] }
